tests/compile_fail/safe_simd_wrong_token.stderr
error[E0277]: the trait bound `Sse42Token: HasAvx` is not satisfied
  --> tests/compile_fail/safe_simd_wrong_token.rs:11:53
   |
11 |         let _ = archmage::mem::avx::_mm256_loadu_ps(sse42, &data);
   |                 ----------------------------------- ^^^^^ the trait `HasAvx` is not implemented for `Sse42Token`
   |                 |
   |                 required by a bound introduced by this call
   |
   = help: the following other types implement trait `HasAvx`:
             Avx2FmaToken
             Avx2Token
             Avx512Fp16Token
             Avx512ModernToken
             Avx512Vbmi2Token
             Avx512Vbmi2VlToken
             Avx512bwToken
             Avx512bwVlToken
           and $N others
note: required by a bound in `archmage::mem::avx::_mm256_loadu_ps`
  --> src/generated/x86/avx.rs
   |
   | pub fn _mm256_loadu_ps(_token: impl HasAvx, mem_addr: &[f32; 8]) -> __m256 {
   |                                     ^^^^^^ required by this bound in `_mm256_loadu_ps`
